Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body{
   justify-content: center;
   align-items: center;
   background-color: hsl(210, 46%, 95%);
+  overflow-x: hidden;
 }
 
 .card{
